--- a/snippets/image-banner-2.liquid
+++ b/snippets/image-banner-2.liquid
@@ -37,7 +37,7 @@
 
 @media screen and (min-width: 950px) {
   .{{id}}-banner {
-    min-height: 72rem;
+    min-height: calc(100vh - 130px);
     flex-direction: row;
   }
 }
