--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -1,144 +1,182 @@
 
-{% render 'image-with-text' %}
-
+{%- case section.settings.type -%}
+  {%- when "type_1" -%}
+    {% render 'image-with-text' %}
+  {%- when "type_2" -%}
+  {% render 'image-with-text-2' %}
+    {%- when "type_3" -%}
+    {% render 'image-with-text-3' %}
+  {%- else -%}
+    {% render 'image-with-text' %}
+{%- endcase -%}
 {% schema %}
+
 {
-  "name": "t:sections.image-with-text.name",
-  "class": "spaced-section spaced-section--full-width",
-  "settings": [
-    {
-      "type": "image_picker",
-      "id": "image",
-      "label": "t:sections.image-with-text.settings.image.label"
-    },
-    {
-      "type": "select",
-      "id": "height",
-      "options": [
+    "name": "t:sections.image-with-text.name",
+    "tag": "section",
+    "class": "spaced-section",
+    "settings": [
         {
-          "value": "adapt",
-          "label": "t:sections.image-with-text.settings.height.options__1.label"
-        },
-        {
-          "value": "small",
-          "label": "t:sections.image-with-text.settings.height.options__2.label"
-        },
-        {
-          "value": "large",
-          "label": "t:sections.image-with-text.settings.height.options__3.label"
+            "type": "select",
+            "id": "type",
+            "options": [
+                {
+                    "value": "type_1",
+                    "label": "type 1"
+                }, {
+                    "value": "type_2",
+                    "label": "type 2"
+                }, {
+                    "value": "type_3",
+                    "label": "type 3"
+                }
+            ],
+            "default": "type_2",
+            "label": "Type"
+        }, {
+            "type": "image_picker",
+            "id": "image",
+            "label": "t:sections.image-with-text.settings.image.label"
+        }, {
+            "type": "select",
+            "id": "height",
+            "options": [
+                {
+                    "value": "adapt",
+                    "label": "t:sections.image-with-text.settings.height.options__1.label"
+                }, {
+                    "value": "small",
+                    "label": "t:sections.image-with-text.settings.height.options__2.label"
+                }, {
+                    "value": "large",
+                    "label": "t:sections.image-with-text.settings.height.options__3.label"
+                }
+            ],
+            "default": "adapt",
+            "label": "t:sections.image-with-text.settings.height.label"
+        }, {
+            "type": "select",
+            "id": "color_scheme",
+            "options": [
+                {
+                    "value": "background-1",
+                    "label": "t:sections.image-with-text.settings.color_scheme.options__1.label"
+                }, {
+                    "value": "background-2",
+                    "label": "t:sections.image-with-text.settings.color_scheme.options__2.label"
+                }, {
+                    "value": "inverse",
+                    "label": "t:sections.image-with-text.settings.color_scheme.options__3.label"
+                }, {
+                    "value": "accent-1",
+                    "label": "t:sections.image-with-text.settings.color_scheme.options__4.label"
+                }, {
+                    "value": "accent-2",
+                    "label": "t:sections.image-with-text.settings.color_scheme.options__5.label"
+                }
+            ],
+            "default": "background-1",
+            "label": "t:sections.image-with-text.settings.color_scheme.label"
+        }, {
+            "type": "select",
+            "id": "layout",
+            "options": [
+                {
+                    "value": "image_first",
+                    "label": "t:sections.image-with-text.settings.layout.options__1.label"
+                }, {
+                    "value": "text_first",
+                    "label": "t:sections.image-with-text.settings.layout.options__2.label"
+                }
+            ],
+            "default": "image_first",
+            "label": "t:sections.image-with-text.settings.layout.label",
+            "info": "t:sections.image-with-text.settings.layout.info"
         }
-      ],
-      "default": "adapt",
-      "label": "t:sections.image-with-text.settings.height.label"
-    },
-    {
-      "type": "select",
-      "id": "color_scheme",
-      "options": [
+    ],
+    "blocks": [
         {
-          "value": "background-1",
-          "label": "t:sections.image-with-text.settings.color_scheme.options__1.label"
+            "type": "title",
+            "name": "title",
+            "limit": 1,
+            "settings": [
+                {
+                    "type": "text",
+                    "id": "title",
+                    "default": "Ideas for inspiration",
+                    "label": "title"
+                }
+            ]
         },
         {
-          "value": "background-2",
-          "label": "t:sections.image-with-text.settings.color_scheme.options__2.label"
-        },
-        {
-          "value": "inverse",
-          "label": "t:sections.image-with-text.settings.color_scheme.options__3.label"
-        },
-        {
-          "value": "accent-1",
-          "label": "t:sections.image-with-text.settings.color_scheme.options__4.label"
-        },
-        {
-          "value": "accent-2",
-          "label": "t:sections.image-with-text.settings.color_scheme.options__5.label"
+            "type": "sub_heading",
+            "name": "Sub heading",
+            "limit": 1,
+            "settings": [
+                {
+                    "type": "text",
+                    "id": "sub_heading",
+                    "default": "Our special offer",
+                    "label": "Sub heading"
+                }
+            ]
+        }, {
+            "type": "heading",
+            "name": "t:sections.image-with-text.blocks.heading.name",
+            "limit": 1,
+            "settings": [
+                {
+                    "type": "text",
+                    "id": "heading",
+                    "default": "Image with text",
+                    "label": "t:sections.image-with-text.blocks.heading.settings.heading.label"
+                }
+            ]
+        }, {
+            "type": "text",
+            "name": "t:sections.image-with-text.blocks.text.name",
+            "limit": 1,
+            "settings": [
+                {
+                    "type": "richtext",
+                    "id": "text",
+                    "default": "<p>Pair text with an image to focus on your chosen product, collection, or blog post. Add details on availability, style, or even provide a review.</p>",
+                    "label": "t:sections.image-with-text.blocks.text.settings.text.label"
+                }
+            ]
+        }, {
+            "type": "button",
+            "name": "t:sections.image-with-text.blocks.button.name",
+            "limit": 1,
+            "settings": [
+                {
+                    "type": "text",
+                    "id": "button_label",
+                    "default": "Button label",
+                    "label": "t:sections.image-with-text.blocks.button.settings.button_label.label",
+                    "info": "t:sections.image-with-text.blocks.button.settings.button_label.info"
+                }, {
+                    "type": "url",
+                    "id": "button_link",
+                    "label": "t:sections.image-with-text.blocks.button.settings.button_link.label"
+                }
+            ]
         }
-      ],
-      "default": "background-1",
-      "label": "t:sections.image-with-text.settings.color_scheme.label"
-    },
-    {
-      "type": "select",
-      "id": "layout",
-      "options": [
+    ],
+    "presets": [
         {
-          "value": "image_first",
-          "label": "t:sections.image-with-text.settings.layout.options__1.label"
-        },
-        {
-          "value": "text_first",
-          "label": "t:sections.image-with-text.settings.layout.options__2.label"
+            "name": "t:sections.image-with-text.presets.name",
+            "blocks": [
+                {
+                    "type": "heading"
+                }, {
+                    "type": "text"
+                }, {
+                    "type": "button"
+                }
+            ]
         }
-      ],
-      "default": "image_first",
-      "label": "t:sections.image-with-text.settings.layout.label",
-      "info": "t:sections.image-with-text.settings.layout.info"
-    }
-  ],
-  "blocks": [
-    {
-      "type": "heading",
-      "name": "t:sections.image-with-text.blocks.heading.name",
-      "limit": 1,
-      "settings": [
-        {
-          "type": "text",
-          "id": "heading",
-          "default": "Image with text",
-          "label": "t:sections.image-with-text.blocks.heading.settings.heading.label"
-        }
-      ]
-    },
-    {
-      "type": "text",
-      "name": "t:sections.image-with-text.blocks.text.name",
-      "limit": 1,
-      "settings": [
-        {
-          "type": "richtext",
-          "id": "text",
-          "default": "<p>Pair text with an image to focus on your chosen product, collection, or blog post. Add details on availability, style, or even provide a review.</p>",
-          "label": "t:sections.image-with-text.blocks.text.settings.text.label"
-        }
-      ]
-    },
-    {
-      "type": "button",
-      "name": "t:sections.image-with-text.blocks.button.name",
-      "limit": 1,
-      "settings": [
-        {
-          "type": "text",
-          "id": "button_label",
-          "default": "Button label",
-          "label": "t:sections.image-with-text.blocks.button.settings.button_label.label",
-          "info": "t:sections.image-with-text.blocks.button.settings.button_label.info"
-        },
-        {
-          "type": "url",
-          "id": "button_link",
-          "label": "t:sections.image-with-text.blocks.button.settings.button_link.label"
-        }
-      ]
-    }
-  ],
-  "presets": [
-    {
-      "name": "t:sections.image-with-text.presets.name",
-      "blocks": [
-        {
-          "type": "heading"
-        },
-        {
-          "type": "text"
-        },
-        {
-          "type": "button"
-        }
-      ]
-    }
-  ]
+    ]
 }
+
 {% endschema %}
