--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -57,6 +57,12 @@
       "label": "t:sections.multicolumn.settings.image_ratio.label"
     },
     {
+      "type": "checkbox",
+      "id": "show_line_separator",
+      "label": "Show line separator",
+      "default":false
+    },
+    {
       "type": "select",
       "id": "column_alignment",
       "options": [
