--- a/snippets/image-with-text.liquid
+++ b/snippets/image-with-text.liquid
@@ -134,7 +134,7 @@
 
 </style>
 
-<div class="{{id}}-image-with-text {% if section.settings.full_width %}{{id}}-image-with-text--full-width{% else %}page-width{% endif %} color-scheme-{{ section.settings.color_scheme }}">
+<div class="{{id}}-image-with-text {% if section.settings.full_width %}{{id}}-image-with-text--full-width{% else %}{% endif %} color-scheme-{{ section.settings.color_scheme }}">
   <div class="{{id}}-image-with-text__grid color-{{ section.settings.color_scheme }}{% if section.settings.layout == 'text_first' %} {{id}}-image-with-text__grid--reverse{% endif %} grid grid--gapless grid--1-col grid--2-col-tablet">
     <div class="grid__item">
       <div class="{{id}}-image-with-text__media {{id}}-image-with-text__media--{{ section.settings.height }} {% if section.settings.image != blank %}media{% else %}{{id}}-image-with-text__media--placeholder placeholder{% endif %}"
