--- a/snippets/image-with-text-3.liquid
+++ b/snippets/image-with-text-3.liquid
@@ -9,14 +9,12 @@
     .{{id}}-image-with-text__heading{
       font-weight: bold;
       line-height: 1.2;
-      margin-bottom: 1em;
     }
     .{{id}}-image-with-text:not(.color-scheme-background-1) {
       margin-bottom: 5rem;
     }
     .{{id}}-image-with-text .grid__item{
         width: 100%;
-        padding: 2em 0;
         display:flex;
         align-items:center;
         justify-content: center;
@@ -29,6 +27,13 @@
         flex:1;
        
       }
+      .{{id}}-image-with-text .grid__item{
+        width: 100%;
+        padding: 0.5em 0;
+        display:flex;
+        align-items:center;
+        justify-content: center;
+      }
     }
 
     .{{id}}-image-with-text .grid {
@@ -38,6 +43,7 @@
 
     .{{id}}-image-with-text__grid {
       overflow: hidden;
+      display:flex;flex-direction: column;
     }
 
     @media screen and (min-width: 750px) {
@@ -96,16 +102,7 @@
       fill: currentColor;
     }
 
-    .{{id}}-image-with-text__content {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      height: 100%;
-      justify-content: center;
-      padding: 4rem 4rem 5rem;
-      max-width:40em;
-    }
-
+    
     @media screen and (min-width: 750px) {
       .{{id}}-image-with-text__grid--reverse .{{id}}-image-with-text__content {
         margin-left: auto;
@@ -114,13 +111,35 @@
 
     @media screen and (min-width: 990px) {
       .{{id}}-image-with-text__content {
-        padding: 6rem 7rem 7rem;
       }
+      .{{id}}-image-with-text__content {
+      display: grid;
+      grid-template-areas:
+      'heading space button'
+      'text space button';
+      grid-template-columns: auto auto auto ;
+      width:100%;
+    }
+    .{{id}}-image-with-text__heading {
+      /* margin-bottom: 0; */
+      grid-area: heading;
+    }
+    .{{id}}-image-with-text__space,.{{id}}-image-with-text__space:empty {
+      /* margin-bottom: 0; */
+      grid-area: space;
+      display:flex;
+    }
+    .{{id}}-image-with-text__text {
+      grid-area: text;
+      max-width: 60rem;
+    }
+    .{{id}}-image-with-text__content .button {
+      grid-area: button;
+      align-self: flex-start;
+      white-space: nowrap;
+    }
     }
 
-    .{{id}}-image-with-text__content > * + * {
-      margin-top: 2rem;
-    }
 
     .{{id}}-image-with-text__content > .{{id}}-image-with-text__text:empty ~ a {
       margin-top: 2rem;
@@ -152,32 +171,33 @@
 
 </style>
 
-<div class="{{id}}-image-with-text {% if section.settings.full_width %}{{id}}-image-with-text--full-width{% else %}{% endif %} color-scheme-{{ section.settings.color_scheme }}">
+<div class="page-width {{id}}-image-with-text {% if section.settings.full_width %}{{id}}-image-with-text--full-width{% else %}{% endif %} color-scheme-{{ section.settings.color_scheme }}">
   <div class="{{id}}-image-with-text__grid color-{{ section.settings.color_scheme }}{% if section.settings.layout == 'text_first' %} {{id}}-image-with-text__grid--reverse{% endif %} grid grid--gapless grid--1-col grid--2-col-tablet">
     <div  class="grid__item">
       <div style="max-width:{{section.settings.image.width}}px ;width:100%">
- <div  class="{{id}}-image-with-text__media {{id}}-image-with-text__media--{{ section.settings.height }} {% if section.settings.image != blank %}media{% else %}{{id}}-image-with-text__media--placeholder placeholder{% endif %}"
-        {% if section.settings.height == 'adapt' and section.settings.image != blank %} 
-        style="padding-bottom: {{ 1 | divided_by: section.settings.image.aspect_ratio | times: 100 }}%;"{% endif %}
-      >
-        {%- if section.settings.image != blank -%}
-          <img  
-            src="{{ section.settings.image | img_url: '800x800' }}"
-            sizes="(min-width: 1100px) 100vw, (min-width: 750px) 100vw, 100vw"
-            alt="{{ section.settings.image.alt | escape }}"
-            loading="lazy"
-            width="{{ section.settings.image.width }}"
-            height="{{ section.settings.image.height }}"
-          >
-        {%- else -%}
-          {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
-        {%- endif -%}
-      </div>
+        <div  class="{{id}}-image-with-text__media {{id}}-image-with-text__media--{{ section.settings.height }} {% if section.settings.image != blank %}media{% else %}{{id}}-image-with-text__media--placeholder placeholder{% endif %}"
+          {% if section.settings.height == 'adapt' and section.settings.image != blank %} 
+          style="padding-bottom: {{ 1 | divided_by: section.settings.image.aspect_ratio | times: 100 }}%;"{% endif %}
+        >
+          {%- if section.settings.image != blank -%}
+            <img  
+              src="{{ section.settings.image | img_url: '800x800' }}"
+              sizes="(min-width: 1100px) 100vw, (min-width: 750px) 100vw, 100vw"
+              alt="{{ section.settings.image.alt | escape }}"
+              loading="lazy"
+              width="{{ section.settings.image.width }}"
+              height="{{ section.settings.image.height }}"
+            >
+          {%- else -%}
+            {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
+          {%- endif -%}
+        </div>
       </div>
      
     </div>
     <div class="grid__item ">
       <div class="{{id}}-image-with-text__content {{id}}-image-with-text__content--{{ section.settings.height }}">
+        <div class="{{id}}-image-with-text__space "></div>
         {%- for block in section.blocks -%}
           {% case block.type %}
             {%- when 'sub_heading' -%}
@@ -185,9 +205,9 @@
                 {{ block.settings.sub_heading | escape }}
               </div>
             {%- when 'heading' -%}
-              <h2 class="{{id}}-image-with-text__heading h1" {{ block.shopify_attributes }}>
+              <h3 class="{{id}}-image-with-text__heading h2" {{ block.shopify_attributes }}>
                 {{ block.settings.heading | escape }}
-              </h2>
+              </h3>
             {%- when 'text' -%}
               <div class="{{id}}-image-with-text__text rte" {{ block.shopify_attributes }}>{{ block.settings.text }}</div>
             {%- when 'button' -%}
