--- a/assets/base.css
+++ b/assets/base.css
@@ -56,7 +56,7 @@
   --color-button: var(--color-base-accent-1);
   --color-button-text: var(--color-base-solid-button-labels);
   --alpha-button-background: 1;
-  --alpha-button-border: 1;
+  --alpha-button-border: 0.4;
 }
 
 .color-background-2,
@@ -1103,7 +1103,7 @@ deferred-media {
   color: rgb(var(--color-button-text));
   min-width: 12rem;
   min-height: 4.5rem;
-  transition: box-shadow var(--duration-short) ease;
+  transition: box-shadow var(--duration-short) ease-in-out,color var(--duration-short) ease-in-out;
   -webkit-appearance: none;
   appearance: none;
 }
@@ -1128,8 +1128,9 @@ deferred-media {
 .button-label,
 .shopify-challenge__button,
 .customer button {
+  border-radius:0.2rem;
   font-size: 1.5rem;
-  letter-spacing: 0.1rem;_banner-banner__text
+  letter-spacing: 0.1rem;
   line-height: 1.2;
   font-weight: bold;
 }
@@ -1150,7 +1151,8 @@ deferred-media {
 .button:not([disabled]):hover,
 .shopify-challenge__button:hover,
 .customer button:hover {
-  box-shadow: 0 0 0 0.2rem rgba(var(--color-button), var(--alpha-button-border));
+  background-color: rgba(var(--color-base-accent-1), var(--alpha-button-background));
+  box-shadow: 0 0 0 0.4rem rgba(var(--color-base-accent-1), var(--alpha-button-border));
 }
 
 /* Button - other */
