--- a/snippets/image-with-text-3.liquid
+++ b/snippets/image-with-text-3.liquid
@@ -42,7 +42,6 @@
     }
 
     .{{id}}-image-with-text__grid {
-      overflow: hidden;
       display:flex;flex-direction: column;
     }
 
@@ -168,57 +167,58 @@
       margin-top: 0;
       margin-bottom: 1rem;
     }
-
+    .{{id}}-image-with-text__title{
+      text-align: center;
+      font-size: 4em;
+    }
 </style>
 
 <div class="page-width {{id}}-image-with-text {% if section.settings.full_width %}{{id}}-image-with-text--full-width{% else %}{% endif %} color-scheme-{{ section.settings.color_scheme }}">
-  <div class="{{id}}-image-with-text__grid color-{{ section.settings.color_scheme }}{% if section.settings.layout == 'text_first' %} {{id}}-image-with-text__grid--reverse{% endif %} grid grid--gapless grid--1-col grid--2-col-tablet">
-    <div  class="grid__item">
-      <div style="max-width:{{section.settings.image.width}}px ;width:100%">
-        <div  class="{{id}}-image-with-text__media {{id}}-image-with-text__media--{{ section.settings.height }} {% if section.settings.image != blank %}media{% else %}{{id}}-image-with-text__media--placeholder placeholder{% endif %}"
-          {% if section.settings.height == 'adapt' and section.settings.image != blank %} 
-          style="padding-bottom: {{ 1 | divided_by: section.settings.image.aspect_ratio | times: 100 }}%;"{% endif %}
-        >
-          {%- if section.settings.image != blank -%}
-            <img  
-              src="{{ section.settings.image | img_url: '800x800' }}"
-              sizes="(min-width: 1100px) 100vw, (min-width: 750px) 100vw, 100vw"
-              alt="{{ section.settings.image.alt | escape }}"
-              loading="lazy"
-              width="{{ section.settings.image.width }}"
-              height="{{ section.settings.image.height }}"
-            >
-          {%- else -%}
-            {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
-          {%- endif -%}
-        </div>
-      </div>
-     
-    </div>
-    <div class="grid__item ">
-      <div class="{{id}}-image-with-text__content {{id}}-image-with-text__content--{{ section.settings.height }}">
-        <div class="{{id}}-image-with-text__space "></div>
+    <div class="{{id}}-image-with-text__grid color-{{ section.settings.color_scheme }}{% if section.settings.layout == 'text_first' %} {{id}}-image-with-text__grid--reverse{% endif %} grid grid--gapless grid--1-col grid--2-col-tablet">
         {%- for block in section.blocks -%}
-          {% case block.type %}
-            {%- when 'sub_heading' -%}
-              <div class="{{id}}-image-with-text__sub-heading" {{ block.shopify_attributes }}>
-                {{ block.settings.sub_heading | escape }}
-              </div>
-            {%- when 'heading' -%}
-              <h3 class="{{id}}-image-with-text__heading h2" {{ block.shopify_attributes }}>
-                {{ block.settings.heading | escape }}
-              </h3>
-            {%- when 'text' -%}
-              <div class="{{id}}-image-with-text__text rte" {{ block.shopify_attributes }}>{{ block.settings.text }}</div>
-            {%- when 'button' -%}
-              {%- if block.settings.button_label != blank -%}
-                <a{% if block.settings.button_link != blank %} href="{{ block.settings.button_link }}"{% endif %} class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}"{% if block.settings.button_link == blank %} aria-disabled="true"{% endif %} {{ block.shopify_attributes }}>
-                  {{ block.settings.button_label | escape }}
-                </a>
-              {%- endif -%}
-          {%- endcase -%}
+            {% case block.type %}
+                {%- when 'title' -%}
+                    <h2 class="{{id}}-image-with-text__title">
+                        {{ block.settings.sub_heading | escape }}
+                    </h2>
+            {%- endcase -%}
         {%- endfor -%}
-      </div>
+        <div class="grid__item">
+            <div style="max-width:{{section.settings.image.width}}px ;width:100%">
+                <div class="{{id}}-image-with-text__media {{id}}-image-with-text__media--{{ section.settings.height }} {% if section.settings.image != blank %}media{% else %}{{id}}-image-with-text__media--placeholder placeholder{% endif %}" {% if section.settings.height == 'adapt' and section.settings.image != blank %} style="padding-bottom: {{ 1 | divided_by: section.settings.image.aspect_ratio | times: 100 }}%;" {% endif %}>
+                    {%- if section.settings.image != blank -%}
+                        <img src="{{ section.settings.image | img_url: '800x800' }}" sizes="(min-width: 1100px) 100vw, (min-width: 750px) 100vw, 100vw" alt="{{ section.settings.image.alt | escape }}" loading="lazy" width="{{ section.settings.image.width }}" height="{{ section.settings.image.height }}">
+                    {%- else -%}
+                        {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
+                    {%- endif -%}
+                </div>
+            </div>
+
+        </div>
+        <div class="grid__item ">
+            <div class="{{id}}-image-with-text__content {{id}}-image-with-text__content--{{ section.settings.height }}">
+                <div class="{{id}}-image-with-text__space "></div>
+                {%- for block in section.blocks -%}
+                    {% case block.type %}
+                        {%- when 'sub_heading' -%}
+                            <div class="{{id}}-image-with-text__sub-heading" {{ block.shopify_attributes }}>
+                                {{ block.settings.sub_heading | escape }}
+                            </div>
+                        {%- when 'heading' -%}
+                            <h3 class="{{id}}-image-with-text__heading h2" {{ block.shopify_attributes }}>
+                                {{ block.settings.heading | escape }}
+                            </h3>
+                        {%- when 'text' -%}
+                            <div class="{{id}}-image-with-text__text rte" {{ block.shopify_attributes }}>{{ block.settings.text }}</div>
+                        {%- when 'button' -%}
+                            {%- if block.settings.button_label != blank -%}
+                                <a {% if block.settings.button_link != blank %} href="{{ block.settings.button_link }}" {% endif %} class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}" {% if block.settings.button_link == blank %} aria-disabled="true" {% endif %} {{ block.shopify_attributes }}>
+                                    {{ block.settings.button_label | escape }}
+                                </a>
+                            {%- endif -%}
+                    {%- endcase -%}
+                {%- endfor -%}
+            </div>
+        </div>
     </div>
-  </div>
 </div>
