--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -5,7 +5,7 @@
 }
 
 .card + .card-information {
-  margin-top: 1.2rem;
+  margin-top: 1.6rem;
 }
 
 .card.card--soft {
@@ -84,6 +84,7 @@
 
 .card-information > * + * {
   margin-top: 0.5rem;
+ 
 }
 
 .card--text-only .card__inner {
@@ -117,7 +118,6 @@
 .card--text-only .card__badge > * {
   margin: 0 1.2rem 1.2rem;
 }
-
 .card--search .card__badge,
 .card--text-only .card__badge {
   position: initial;
@@ -157,10 +157,14 @@
 }
 
 .card-information__text {
+  font-weight: 600;
   display: block;
   padding-right: 1.2rem;
+  font-size: 1.4rem;
 }
-
+.card-information .price{
+  font-size: 1.4rem;
+}
 .card-information__wrapper {
   width: 100%;
 }
@@ -171,11 +175,12 @@
 }
 
 .card-information__wrapper > .price {
+  font-weight: 600;
   color: rgb(var(--color-foreground));
 }
 
 .card-information__wrapper > *:not(.visually-hidden:first-child) + * {
-  margin-top: 1.1rem;
+  margin-top: 0.6rem;
 }
 
 .card-information__wrapper .caption {
