--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -121,7 +121,7 @@
     <ul hidden>
       <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
     </ul>
-
+    <script src="{{ 'visible-animate.js' | asset_url }}" defer="defer"></script>
     <script>
       window.routes = {
         cart_add_url: '{{ routes.cart_add_url }}',
