--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -92,6 +92,7 @@
       }
     {% endstyle %}
 
+    {{ 'style.css' | asset_url | stylesheet_tag }}
     {{ 'base.css' | asset_url | stylesheet_tag }}
 
     {%- unless settings.type_body_font.system? -%}
