--- a/assets/newsletter-section.css
+++ b/assets/newsletter-section.css
@@ -3,7 +3,9 @@
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
-
+.newsletter-form__field-wrapper .field__label {
+  font-style: italic;
+}
 .newsletter__wrapper:not(.color-background-1) {
   padding-top: 5rem;
   padding-bottom: 5rem;
