--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -31,7 +31,7 @@
 
 @media screen and (min-width: 750px) {
   .footer__content-top {
-    padding-top: 7rem;
+    padding-top: 10rem;
     padding-bottom: 7rem;
   }
 
@@ -47,7 +47,7 @@
 }
 
 .footer__content-bottom {
-  border-top: solid 0.1rem rgba(var(--color-foreground), 0.2);
+  /* border-top: solid 0.1rem rgba(var(--color-foreground), 0.2); */
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
@@ -161,6 +161,8 @@
 }
 
 .footer-block__heading {
+  font-weight: 600;
+  text-transform:uppercase;
   margin-bottom: 2rem;
   margin-top: 0;
   font-size: 1.6rem;
@@ -168,7 +170,7 @@
 
 @media screen and (min-width: 990px) {
   .footer-block__heading {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
   }
 }
 
@@ -233,7 +235,7 @@
 
 @media screen and (min-width: 750px) {
   .footer__content-bottom {
-    border-top-width: 0.1rem;
+    /* border-top-width: 0.1rem; */
   }
 }
 
@@ -273,11 +275,16 @@
 }
 
 .footer__localization h2 {
+  text-align:center;
   margin: 1rem 1rem 0.5rem;
   color: rgba(var(--color-foreground), 0.75);
 }
 
 @media screen and (min-width: 750px) {
+  
+  .footer__localization h2 {
+    text-align:left;
+  }
   .footer__localization {
     padding: 0.4rem 0;
     justify-content: flex-start;
