--- a/snippets/image-with-text-3.liquid
+++ b/snippets/image-with-text-3.liquid
@@ -174,7 +174,7 @@
 </style>
 
 <div class="page-width {{id}}-image-with-text {% if section.settings.full_width %}{{id}}-image-with-text--full-width{% else %}{% endif %} color-scheme-{{ section.settings.color_scheme }}">
-    <div class="{{id}}-image-with-text__grid color-{{ section.settings.color_scheme }}{% if section.settings.layout == 'text_first' %} {{id}}-image-with-text__grid--reverse{% endif %} grid grid--gapless grid--1-col grid--2-col-tablet">
+    <div class="space-y-12 {{id}}-image-with-text__grid color-{{ section.settings.color_scheme }}{% if section.settings.layout == 'text_first' %} {{id}}-image-with-text__grid--reverse{% endif %} grid grid--gapless grid--1-col grid--2-col-tablet">
         {%- for block in section.blocks -%}
             {% case block.type %}
                 {%- when 'title' -%}
@@ -196,7 +196,7 @@
 
         </div>
         <div class="grid__item ">
-            <div class="{{id}}-image-with-text__content {{id}}-image-with-text__content--{{ section.settings.height }}">
+            <div class="space-y-6 {{id}}-image-with-text__content {{id}}-image-with-text__content--{{ section.settings.height }}">
                 <div class="{{id}}-image-with-text__space "></div>
                 {%- for block in section.blocks -%}
                     {% case block.type %}
