--- a/assets/base.css
+++ b/assets/base.css
@@ -261,7 +261,7 @@ body,
 }
 
 .hidden {
-  display: none !important;
+  display: none;
 }
 
 .visually-hidden {
@@ -463,7 +463,7 @@ table:not([class]) th {
 }
 
 .hidden {
-  display: none !important;
+  display: none ;
 }
 
 @media screen and (max-width: 749px) {
