--- a/assets/component-price.css
+++ b/assets/component-price.css
@@ -81,6 +81,7 @@
 }
 
 .price--on-sale .price-item--regular {
+  opacity: 0.6;
   text-decoration: line-through;
   color: rgba(var(--color-foreground), 0.75);
 }
