--- a/sections/animate-sections.liquid
+++ b/sections/animate-sections.liquid
@@ -1,5 +1,5 @@
 <style>
-    /* .shopify-section{
+    .shopify-section{
       visibility: hidden;
       opacity: 0;
       transform:translateY(200px);
@@ -9,7 +9,7 @@
       visibility: visible;
       transform:translateY(0%);
       opacity: 1;
-    } */
+    }
 </style>
 <visible-animate data-selector=".shopify-section">
 </visible-animate>
