--- a/assets/style.css
+++ b/assets/style.css
@@ -2043,7 +2043,6 @@ video {
 }
 
 .text-subtitle {
-  font-family: Montserrat;
   font-size: 14px;
   line-height: 17px;
   letter-spacing: 0.06em;
@@ -2051,7 +2050,6 @@ video {
 }
 
 .text-button {
-  font-family: Montserrat;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 500;
@@ -2075,7 +2073,6 @@ video {
 }
 
 .categories {
-  font-family: Montserrat;
   font-size: 14px;
   line-height: 17px;
   letter-spacing: 0.06em;
@@ -2088,7 +2085,6 @@ video {
 }
 
 .notification {
-  font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
@@ -2223,6 +2219,14 @@ video {
   margin-top: 4rem;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
 .mt-12 {
   margin-top: 3rem;
 }
@@ -2353,6 +2357,10 @@ video {
 
 .w-1\/2 {
   width: 50%;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .min-w-\[200px\] {
@@ -2681,6 +2689,12 @@ video {
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-y-reverse > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 1;
 }
@@ -2931,6 +2945,10 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-t {
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
@@ -3005,6 +3023,16 @@ video {
 
 .border-none {
   border-style: none;
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
 .decoration-slice {
@@ -3111,12 +3139,12 @@ video {
      object-fit: scale-down;
 }
 
-.p-\[2rem\] {
-  padding: 2rem;
+.p-1 {
+  padding: 0.25rem;
 }
 
-.p-6 {
-  padding: 1.5rem;
+.p-2 {
+  padding: 0.5rem;
 }
 
 .py-24 {
@@ -3137,6 +3165,35 @@ video {
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.pl-\[2\.5rem\] {
+  padding-left: 2.5rem;
 }
 
 .text-left {
@@ -3187,6 +3244,16 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -3273,6 +3340,21 @@ video {
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgba(156, 163, 175, var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 
 .underline {
@@ -3541,6 +3623,10 @@ video {
 
 .line-clamp-none {
   -webkit-line-clamp: unset;
+}
+
+.last\:border-transparent:last-child {
+  border-color: transparent;
 }
 
 .hover\:font-bold:hover {
