--- a/snippets/breadscumb.liquid
+++ b/snippets/breadscumb.liquid
@@ -2,7 +2,7 @@
 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="12px" width="12px" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L10.293 8 4.646 2.354a.5.5 0 010-.708z" clip-rule="evenodd"></path></svg>
 {%- endcapture -%}
 {% unless request.page_type == 'index' or request.page_type == 'cart' %}
-    <nav aria-label="breadcrumbs" class=" pt-md mb-6 text-subtitle uppercase text-gray-500 flex flex-wrap items-baseline space-x-3" role="navigation">
+    <nav aria-label="breadcrumbs" class=" pt-md mb-6 text-subtitle  text-gray-500 flex flex-wrap items-baseline space-x-3" role="navigation">
         <a class="text-effect-1" href="/collections/all" title="Shop" id="breadcrumb-home">Shop</a>
         {% if request.page_type == 'product' %}
             {%- if collection.url -%}
